tests/a/tests/integrity/fail/struct/struct.0.stderr
error: expected {bin}{bin}, found {bin}{bin,c}
  --> tests/integrity/fail/struct/struct.0.rs:21:9
   |
21 |         string
   |         ^^^^^^
